Find bugs cleanup